<resources>
    <string name="app_name">Школьная Литература</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_settings">Настройки текста</string>
    <string name="notes">Заметки</string>

    <string name="def">default</string>
    <string name="regular_books">Книги</string>
    <string name="summer_books">Литература на лето</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_login">Вход</string>
    <string name="prompt_username">Имя пользователя</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_surname">Фамилия</string>
    <string name="action_reg">Регистрация</string>
    <string name="action_log_in">Вход</string>
    <string name="action_exit">Выход</string>
    <string name="action_save_profile_info">Сохранить</string>
    <string name="action_add">Добавить+</string>
    <string name="action_create_note">Создать заметку</string>
    <string name="action_close">Закрыть</string>
    <string name="admob_unit_id">ca-app-pub-9199233195580101/5260774504</string>
    <string name="admob_app_id">ca-app-pub-9199233195580101~5402877753</string>

    <string name="info">1. Приложение "Школьная литература" предоставляет пользователю наиболее популярные произведения из школьного курса литературы. При регистрации необходимо выбрать класс обучения (5 - 11), произведения которого вам интересны. В разделе "Книги" представлены литературные произведения, изучаемые в выбранном при регистрации классе. В разделе "Настройки" можно изменить свои личные данные, включая класс обучения.\n\n
2. В режиме чтения пользователь может нажать на номер страницы для открытия окна перехода на другую страницу. Чтобы листать страницы нужно нажимать на левую/правую половину экрана. В режиме чтения пользователь может перемещаться между страницей с текстом и страницей с заметками посредством нажатия на левую и парую кнопку внизу экрана. Чтобы создать заметку нужно на странице с заметками нажать на кнопку "+" внизу экрана, появится диалоговое окно, в котором можно ввести текст заметки и номер страницы, к которой привязать эту заметку (по умолчанию берется номер текущей страницы в книге). Нажатие на заметку в вашем списке отправит вас на страницу в тексте с указанным в заметке номером. Длинное нажатие откроет контекстное меню, с помощью которого можно будет изменить или удалить заметку.\n\n
3. При выборе книги впервые, начнется загрузка текста с сервера, в дальнейшем текст будет открываться моментально, так как он будет загружен на устройство.\n\n
4. Выбор литературных произведений для приложения осуществлялся путем выявления наиболее часто встречающихся произведений в программах по литературе различных школ. К сожалению, некоторые произведения было невозможно добавить в приложение в связи с законом об авторском праве (согласно статье 1281 ГК РФ, исключительное право на произведение действует в течение всей жизни автора и семидесяти лет, считая с 1 января года, следующего за годом смерти автора). В связи с различием программ по литературе в разных школах, возможны ситуации, когда в приложении не будет необходимого при обучении литературного произведения. В таких ситуациях следует обращаться в тех. поддержку приложения. Если на произведение не распространяется исключительное право автора, оно будет добавлено в приложение в ближайшее время.\n\n
5. В случае обнаружения багов в работе приложения или проблем с текстом какого-то произведения, следует обращаться в тех. поддержку приложения. Подобные ошибки будут исправляться по мере поступления. С предложениями по улучшению функционала приложения так же следует обращаться в тех. поддержку приложения. Контакты тех. поддержки: shl-tech-supp@mail.ru\n</string>


</resources>
