<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/registration_form"
    android:background="@color/mainYellow"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fitisov123.schoolliterature.RegistrationActivity">

    <EditText
        android:id="@+id/name"
        android:background="@drawable/design_et"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/reg_margin"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_height="50dp"
        android:maxLength="25"
        android:singleLine="true"
        android:textColorHint="@color/mainDark"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textCursorDrawable="@null"
        android:textColor="@color/mainDark"
        android:hint="@string/prompt_name"
        android:maxLines="1" />


    <EditText
        android:id="@+id/new_password"
        android:layout_above="@id/name"
        android:layout_marginBottom="@dimen/reg_margin"
        android:background="@drawable/design_et"
        android:layout_width="match_parent"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_height="50dp"
        android:maxLength="25"
        android:singleLine="true"
        android:textColorHint="@color/mainDark"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textCursorDrawable="@null"
        android:textColor="@color/mainDark"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/surname"
        android:layout_centerVertical="true"
        android:background="@drawable/design_et"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_height="50dp"
        android:maxLength="25"
        android:singleLine="true"
        android:textColorHint="@color/mainDark"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textCursorDrawable="@null"
        android:textColor="@color/mainDark"
        android:hint="@string/prompt_surname"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_username"
        android:background="@drawable/design_et"
        android:layout_above="@id/new_password"
        android:layout_marginBottom="@dimen/reg_margin"
        android:layout_width="match_parent"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_height="50dp"
        android:maxLength="25"
        android:singleLine="true"
        android:textColorHint="@color/mainDark"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textCursorDrawable="@null"
        android:textColor="@color/mainDark"
        android:hint="@string/prompt_username"
        android:maxLines="1" />


    <TextView
        android:id="@+id/grade_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surname"
        android:layout_marginTop="@dimen/reg_margin"
        android:layout_alignLeft="@id/surname"
        android:textColor="@color/Darker"
        android:textSize="@dimen/profile_text_size"
        android:textStyle="bold"
        android:text="Класс: "/>

    <Spinner
        android:id="@+id/grade"
        android:layout_below="@id/surname"
        android:layout_marginTop="@dimen/reg_margin"
        android:layout_alignRight="@id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/reg"
        android:layout_below="@id/grade"
        android:background="@drawable/design_login_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="25dp"
        android:text="@string/action_reg"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/mainDark"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
</RelativeLayout>