<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/login_form"
    android:background="@color/mainYellow"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fitisov123.schoolliterature.LoginActivity" >


    <EditText
        android:id="@+id/password"
        android:background="@drawable/design_et"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_height="50dp"
        android:maxLength="25"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/mainDark"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textCursorDrawable="@null"
        android:textColor="@color/mainDark"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/password"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="@dimen/login_margin"
        android:maxLength="25"
        android:hint="@string/prompt_username"
        android:background="@drawable/design_et"
        android:textColorHint="@color/mainDark"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textCursorDrawable="@null"
        android:textColor="@color/mainDark"
        android:maxLines="1" />

    <Button
        android:id="@+id/login"
        android:background="@drawable/design_login_button"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        style="?android:textAppearanceSmall"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/action_log_in"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/new_reg"
        android:background="@drawable/design_login_button"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        style="?android:textAppearanceSmall"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin"
        android:text="@string/action_reg"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/Darker"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_logo"
        android:layout_height="110dp"
        android:layout_width="185dp"
        android:background="@drawable/cut_logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/username"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>
